--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 table {
+  margin: 1rem 0;
   border: solid 2px black;
   border-radius: 0.5rem;
   padding: 0.2rem;
