--- a/public/style.css
+++ b/public/style.css
@@ -3,16 +3,58 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h3 {
+  margin: 0;
+  color: white;
+}
+
 #root {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+#side {
+  display: flex;
+  width: 95%;
+  margin: 1rem 0;
+}
+
+#side>* {
+  margin: 0 0.5rem;
+}
+
 #container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lightgray;
+  padding:0.5rem;
+}
+
+form>* {
+  margin: 0.2rem 0;
+}
+
+#entry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: black solid 2px;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  background-color: lightslategray;
+  height: 220px;
+}
+
+#entry>* {
+  margin: 0 0 0.5rem 0;
 }
 
 table {
