--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,24 @@
 body {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #293038;
 }
 
-h3 {
+h4 {
   margin: 0;
   color: white;
+}
+
+h1 {
+  color: white;
+}
+
+span {
+  color: white;
+}
+
+label {
+  font-size: 0.8rem;
 }
 
 #root {
@@ -33,9 +46,13 @@ h3 {
 form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: lightgray;
   padding:0.5rem;
+  border-radius: 0.5rem;
+}
+
+label {
+  text-align: left;
 }
 
 form>* {
@@ -46,28 +63,30 @@ form>* {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: black solid 2px;
   border-radius: 0.5rem;
-  padding: 1rem;
-  background-color: lightslategray;
-  height: 220px;
+  padding: 0.33rem 0.7rem 0.33rem 0.7rem;
+  background-color: #3a4653;
+  height: 265px;
 }
 
 #entry>* {
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0.25rem 0;
 }
 
 table {
   margin: 1rem 0;
-  border: solid 2px black;
   border-radius: 0.5rem;
   padding: 0.2rem;
   border-collapse: collapse;
   display: flex;
   flex-direction: column;
   width: 90%;
-  background-color: lightslategray;
+  background-color: #3a4653;
   
+}
+
+button {
+  margin: 0.5rem 0 0 0;
 }
 
 tbody{
@@ -76,6 +95,7 @@ tbody{
   overflow: auto;
   height: 500px;
   margin: 0 0.5rem 1rem 0.5rem;
+  border-radius: 0.5rem;
 }
 
 thead {
@@ -90,19 +110,19 @@ th,td {
   padding: 4px;
   text-align: left;
   width: 100px;
-  flex: 1;
-  /* border: 1px solid black; */
   margin:0;
 }
 
+
 th {
-  background-color: lightslategray;
+  background-color: #3a4653;
   color: white;
 }
 
 td {
   font-size: 0.75rem;
 }
+
 
 tr:nth-child(even) {
   background-color: white;
@@ -112,11 +132,42 @@ tr:nth-child(odd) {
   background-color: lightgray;
 }
 
+tr:first-child {
+  flex: 3;
+}
+
+.first {
+  flex: 1;
+}
+
+.last {
+  flex: 1;
+}
+
+.email {
+  flex: 2;
+}
+
+.title {
+  flex: 2;
+}
+
 nav {
   margin: 1rem 0;
   width: 500px;
   display: flex;
   justify-content: space-around;
+  background-color: #3a4653;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
+nav>span:first-child {
+  background-color: white;
+}
+
+nav>span:last-child {
+  background-color: white;
 }
 
 a {
@@ -128,13 +179,12 @@ nav>span {
   width: 50px;
   display: flex;
   justify-content: center;
-  border: solid black 1px;
   border-radius: 0.5rem;
   background-color: lightgray;
 }
 
 .selected {
-  background-color: lightslategray;
+  background-color: #3a4653;
 }
 
 .selected>a {
